--- a/app/src/main/res/layout/content_rvjson_file.xml
+++ b/app/src/main/res/layout/content_rvjson_file.xml
@@ -18,6 +18,17 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="JSON Content"
         android:id="@+id/textView"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/rv_biere"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:context=".MainActivity"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/textView"
+        />
 </RelativeLayout>
