--- a/app/src/main/res/layout/activity_prof.xml
+++ b/app/src/main/res/layout/activity_prof.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="org.esiea.he_wan.mybasicapp.RVJsonFile">
+    tools:context="org.esiea.he_wan.mybasicapp.ProfActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_rvjson_file" />
+    <include layout="@layout/content_prof" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
