--- a/app/src/main/res/layout/content_prof.xml
+++ b/app/src/main/res/layout/content_prof.xml
@@ -9,14 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.esiea.he_wan.mybasicapp.RVJsonFile"
-    tools:showIn="@layout/activity_rvjson_file">
+    tools:context="org.esiea.he_wan.mybasicapp.ProfActivity"
+    tools:showIn="@layout/activity_prof"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="JSON Content"
+        android:text="@string/beer_list"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -27,8 +28,9 @@
         android:id="@+id/rv_biere"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:context=".MainActivity"
+        tools:context=".ProfActivity"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/textView"
         />
+
 </RelativeLayout>
