--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="org.esiea.he_wan.mybasicapp.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/french"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/french"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/english"
+        android:orderInCategory="100"
+        android:title="@string/english"
         app:showAsAction="never" />
 </menu>
